@@ -1,3 +1,10 @@
+[b]Version 0.8.1[/b]:
+
+(2012-07-04)
+ * New option "save_dirs" in the [directories] section. If set to false
+   the latest used directory won't be saved.
+
+
 [b]Version 0.8.0[/b]:
 
 (2012-04-01)
